--- a/როგორ_დავიწყოთ.md
+++ b/როგორ_დავიწყოთ.md
@@ -36,6 +36,17 @@ Linux პოპულარულია, რადგან:
 ეს ოპცია საუკეთესო არის მაშინ, თუ კუსტომიზაციას მეტ მნიშვნელობას ანიჭებთ და გირჩევნიათ, რომ ოპერაციული სისტემა ზუსტად თქვენს მოთხოვნილებებს მოერგოს.
 
 
+## რეკომენდირებული აპლიკაციის ტიპები
+
+სხვადასხვა ტიპის CTF ის ამოხსნა განსხვავებულ ხელსაწყოებს საჭიროებს. რა აპლიკაციებია საუკეთესო დასაწყისისთვის ეს სადავო საკითხია, რადგან
+ყველა ადამიანი სხვასხვა ტიპის ხელსაწყოს ანიჭებს უპირატესობას, მიუხედავად იმისა, რომ ძირეულად ყველა მსგავსი პროგრამა ერთსა და იმავე საქმეს ასრულებს.
+
+ამის მიუხედავად, არსებობს აპლიკაციების რამდენიმე კატეგორია, რომლის გამოყენებაც არის აუცილებელი სტანდარტული CTF დავალებების გადასალახად, ესენია:
+
+- დეკომპილატორები/დამშლელები - აპლიკაციები, რომლებიც მანქანურ კოდს შლის და შეძლებისდაგვარად "თარგმინს" ადამიანურ კოდის ენაზე. მსგავსი აპლიკაციის მაგალითია [Binaryninja](https://binary.ninja/)
+- 
+
+
 
 
 
