--- a/როგორ_დავიწყოთ.md
+++ b/როგორ_დავიწყოთ.md
@@ -44,7 +44,18 @@ Linux პოპულარულია, რადგან:
 ამის მიუხედავად, არსებობს აპლიკაციების რამდენიმე კატეგორია, რომლის გამოყენებაც არის აუცილებელი სტანდარტული CTF დავალებების გადასალახად, ესენია:
 
 - დეკომპილატორები/დამშლელები - აპლიკაციები, რომლებიც მანქანურ კოდს შლის და შეძლებისდაგვარად "თარგმინს" ადამიანურ კოდის ენაზე. მსგავსი აპლიკაციის მაგალითია [Binaryninja](https://binary.ninja/)
-- 
+  
+- დებაგერები - Debugger ანუ დებაგერი არის აპლიკაცია, რომელიც გვაძლევს საშუალებას ვნახოთ რა ხდება აპლიკაციის "შიგნით" როდესაც ის გაშვებულია, ან რა ხდებოდა მაშინ, როდესაც ეს აპლიკაცია მოულოდნელად გაითიშა.
+მსგავსი მაგალითია [GDB](https://www.sourceware.org/gdb/)
+
+- ვებ აპლიკაციის ანალიზის ხელსაწყოები - ამ კატეგორიაში ბევრი სხვადასხვა ტიპის ხელსაწყო შედის, მაგალითად [Nikto](https://www.cirt.net/Nikto2) არის ვებ აპლიკაციების სკანერი, რომელიც ეძებს უსაფრთხოების გარღვევებს აპლიკაციებში, [Burp](https://portswigger.net/burp) არის კიდევ ერთი მსგავსი აპლიკაცია რომელიც უფრო დეტალური და მანუალური სკანირების საშუალებას გვაძლევს, და სხვა.
+
+- ქსელის ანალიზი - არსებობს აპლიკაციები, რომლებსაც შეუძლიათ გარკვეული ფიზიკური ხელსაწყოებით ქსელის ნაკადის "დაჭერა" დამახსოვრება და შემდეგ გაანალიზება. ამ მიზნისთვის საუკეთესო აპლიკაციაა [Wireshark](https://www.wireshark.org/)
+
+
+ეს არის მხოლოდ საშუალო CTF დავალებისთვის საჭირო აპლიკაციები, თუმცა ბევრ მსგავს დავალებას დასჭირდება სხვადასხვა ტიპის და სხვადასხვა კატეგორიაზე მორგებული ხელსაწყოები. მსგავსი ხელსაწყოების კვლევა 
+კიბერუსაფრთხოების ერთ-ერთი განუყრელი ნაწილია.
+
 
 
 
