--- a/როგორ_დავიწყოთ.md
+++ b/როგორ_დავიწყოთ.md
@@ -36,6 +36,23 @@ Linux პოპულარულია, რადგან:
 ეს ოპცია საუკეთესო არის მაშინ, თუ კუსტომიზაციას მეტ მნიშვნელობას ანიჭებთ და გირჩევნიათ, რომ ოპერაციული სისტემა ზუსტად თქვენს მოთხოვნილებებს მოერგოს.
 
 
+იმ შემთხვევაში, თუ იყენებთ Windows ტიპის ოპერაციულ სისტემას და არ გინდათ, რომ მის მაგივრად Linux ან სხვა ნებისმიერი ოპერაციული სისტემა დააყენოთ, საუკეთესო გამოსავალია ვირტუალური
+მანქანის დაყენება და გამართვა. ეს ხდება შემდეგნაირად:
+
+1. გადმოწერეთ და დააყენეთ ვირტუალური მანქანის აპლიკაცია ( მაგალითისთვის [Oracle Virtualbox](https://www.virtualbox.org/)
+2. გადმოწერეთ თქვენთვის სასურველი Linux დისტრიბუციის .iso ფაილი ( მაგალითისთვის [Kali Linux](https://www.kali.org/get-kali/#kali-virtual-machines)
+3. გახსენით ვირტუალური მანქანის აპლიკაცია და შექმენით ახალი მანქანა
+4. დაარქვით სახელი, მიუთითეთ თქვენი დისტრიბუციის მონაცემები და მიაბით გადმოწერილი .iso ფაილი.
+5. შეგიძლიათ შეცვალოთ სისტემური შესაძლებლობებიც, მაგალითად შესაძლებელია RAM ის რაოდენობის გაზრდა, მყარი დისკის მოცულობის გაზრდა და პროცესორების ნაკადების რაოდენობის გაზრდაც კი.
+6. ყველაფერი მზად არის, შეგიძლიათ ჩართოთ და სცადოთ თქვენი ახალი ოპერაციული სისტემა.
+
+
+
+
+
+
+
+
 ## რეკომენდირებული აპლიკაციის ტიპები
 
 სხვადასხვა ტიპის CTF ის ამოხსნა განსხვავებულ ხელსაწყოებს საჭიროებს. რა აპლიკაციებია საუკეთესო დასაწყისისთვის ეს სადავო საკითხია, რადგან
