--- a/როგორ_დავიწყოთ.md
+++ b/როგორ_დავიწყოთ.md
@@ -74,8 +74,22 @@ Linux პოპულარულია, რადგან:
 კიბერუსაფრთხოების ერთ-ერთი განუყრელი ნაწილია.
 
 
+## სად შემიძლია CTF დავალებები ვნახო?
+
+CTF დავალებების გასაკეთებლად მრავალი ინგლისურენოვანი პლატფორმა არსებობს, მათ შორის ყველაზე პოპულარული პლატფორმებია:
+
+- PicoCTF
+- CTFtime
+- HackTheBox
+- TryHackMe
 
 
+თუმცა არსებობს ქართული CTF ების პლატფორმაც:
+
+-Cyberlab.ge
+
+
+ამ პლატფორმებზე თქვენ შეხვდებით სხვადასხვა კატეგორიის და ტიპის CTF დავალებებს დამწყებიდან ექსპერტამდე.
 
 
 
