Update "ხელსაწყოები" და მათი გამოყენება.md

--- a/"ხელსაწყოები" და მათი გამოყენება.md
+++ b/"ხელსაწყოები" და მათი გამოყენება.md
@@ -1,1 +1,16 @@
 # ხელსაწყოები და მათი გამოყენება
+
+
+CTF დავალებების მიხედვით ბევრი სხვადასხვა ხელსაწყოს გამოყენება შეიძლება მოგიწიოთ, მათ შორის სკანირება, კრიპტოგრაფია, ექსპლუატაცია და კომპიუტერული ექსპერტიზა (Foresincs). 
+ამისდა მიუხედავად ბევრი CTF დავალების საწყისი მიდგომა მსგავსია, აქ ვისაუბრებ ყველაზე ხშირად გამოყენებად ხელსაწყოებზე და მათ ეფექტურად გამოყენებაზე.
+
+
+
+## ენუმერაცია და დაზვერვა
+### Nmap (Network Mapper)
+Nmap არის ძალიან საჭირო აპლიკაცია, რომელიც გამოიყენება ქსელის სკანირებისთვის და ღია პორტებისა და სერვისების აღმოსაჩენად.
+
+ინსტალაცია:
+```
+sudo apt install nmap
+```
