Update "ხელსაწყოები" და მათი გამოყენება.md

--- a/"ხელსაწყოები" და მათი გამოყენება.md
+++ b/"ხელსაწყოები" და მათი გამოყენება.md
@@ -105,7 +105,6 @@ Wordlist ით მოდიფიკაციის გარეშე:
 
 ```
 dirb <საიტის-მისამართი>
-
 ``` 
 
 ამ ბრძანებით აპლიკაცია ეძებს ისეთ ხშირად გამოყენებად დირექტორიების სახელებს როგორიცაა  /admin, /uploads, /config და სხვა, საიდანაც შეგვიძლია დამატებითი
@@ -118,7 +117,6 @@ dirb <საიტის-მისამართი>
 
 ```
 dirb <საიტის-მისამართი <Wordlist-ის-მდებარეობა-დისკზე
-
 ``` 
 
 
@@ -127,15 +125,19 @@ Nmap ის მსგავსად ამ აპლიკაციასაც
 
 ```
 dirb <საიტის-მისამართი -X <.გაფართოებები,.მძიმით,.გამოყოფილი)
-
 ``` 
 
 მეტი ბრძანებების და ოპციების სანახავად გამოიყენეთ შემდეგი ბრძანება:
 
 ``` 
 man dirb 
-
 ``` 
 
 
+## ვებ-აპლიკაციები და მათი ექსპლუატაცია
 
+ვებ ექსპლუატაცია გულისხმობს სპეციალური ხელსაწყოების გამოყენებით  უსაფრთხოების გარღვევების მოძებნას, ინტერნეტის ტრაფიკის ანალიზს, და ვებ აპლიკაციების 
+მანიპულაციას. სპეციალური ხელსაწყოები გვეხმარება ვიპოვოთ, შევცვალოთ და თავიდან გავგზავნოთ სპეციფიური HTTP მოთხოვნები. ამ მიზნისთვის ბევრი აპლიკაცია 
+შეიძლება გამოვიყენოთ, მაგალითად: Burp-Suite.
+
+### ანალიზი Burp-suite ს გამოყენებით.
