Update "ხელსაწყოები" და მათი გამოყენება.md

--- a/"ხელსაწყოები" და მათი გამოყენება.md
+++ b/"ხელსაწყოები" და მათი გამოყენება.md
@@ -141,3 +141,21 @@ man dirb
 შეიძლება გამოვიყენოთ, მაგალითად: Burp-Suite.
 
 ### ანალიზი Burp-suite ს გამოყენებით.
+
+Burp Suite არის GUI აპლიკაცია ( აპლიკაცია, რომელიც არ ეშვება ტერმინალში და აქვს თავისი გრაფიკული ინტერფეისი) რომელიც გვაძლევს შესაძლებლობას, რომ
+ჩავკვეთოთ, გადავაკეთოთ და თავიდან გავგზავნოთ გადაკეთებული HTTP მოთხოვნები, ეს აპლიკაცია იდეალურია აუთენთიკაციის შესამოწმებლად, პარამეტრების გადასაკეთებლად
+ვებ გვერდზე და ე.წ "ინჯექციის" გასაკეთებლად.
+
+
+მიუხედავად იმისა, რომ Burp ს აქვს გრაფიკული ინტერფეისი, მისი გამოყენება საკმაოდ რთულია და შესწავლას მოითხოვს. მას გააჩნია როგორც უფასო, ასევე ფასიანი ვერსია.
+აპლიკაცია გამოყენებისთვის გვიხსნის დაკონფიგურებულ chromium ბრაუზერს, სადაც Burp ის პროქსი მისამართია მითითებული ( 127.0.0.1:8080 ). "Intercept" ის, ანუ ჩაჭრის
+რეჟიმის ჩასართავად უნდა გადავიდეთ შესაბამის გრაფაზე, დავაჭიროთ ღილაკს "Intercept" და გავხსნათ Burp ის ბრაუზერი აპლიკაციიდან. როდესაც ბრაუზერი ჩაირთვება, ჩვეულებრივ უნდა შევიდეთ მსხვერპლის ვებ-გვერდზე. საიტი არ ჩაირთვება და მუდმივი ჩატვირთვის რეჟიმში იქნება, რადგან Burp მა დაიჭირა მიმავალი HTTP ტრაფიკი და ელოდება თქვენს მოდიფიკაციას.
+
+
+ამ აპლიკაციის შესწავლა ნებისმიერ კიბერუსაფრთხოების ენთუზიასტს მისცემს ფასდაუდებელ ცოდნას ვებ აპლიკაციების პენეტრაციულ ტესტინგში. მისი დეტალურად შესწავლა შეიძლება შემდეგი ბმულიდან:
+
+```
+https://portswigger.net/training
+```  
+
+
