Update "ხელსაწყოები" და მათი გამოყენება.md

--- a/"ხელსაწყოები" და მათი გამოყენება.md
+++ b/"ხელსაწყოები" და მათი გამოყენება.md
@@ -164,4 +164,20 @@ https://portswigger.net/burp/documentation/desktop/getting-started/download-and-
 https://portswigger.net/training
 ```  
 
+### SQL ინექცია sqlmap ის გამოყენებით
 
+
+Structured Querry Language ანუ SQL არის სტანდარტული პროგრამირების ენა მონაცემთა ბაზების შექმნისთვისა და მოდიფიცირებისთვის. ვებ აპლიკაციების უმეტესი ნაწილი იყენებს SQL მონაცემთა ბაზებს სხვადასხვა ტიპის მონაცემების შესანახად, როგორიცაა: მომხმარებელთა ინფორმაცია, ზოგადი ინფორმაცია, პაროლები და სხვა. SQL ინექცია სწორედ
+ამ სერვისის ექსპლუატაციას ისახავს მიზნად. SQL ინექციის მეთოდით ჩვენ მონაცემემთა ბაზას ვატყუებთ, რომ შეგვყავს მონაცემი, თუმცა რეალურად შეგვყავს SQL კოდი და 
+ვაიძულებთ გამოიტანოს ჩვენს მიერ მითითებული მონაცემები.
+
+SQL ინექცია ხელით გაწერილი კოდითაც კეთდება, თუმცა ხშირ შემთხვევაში შეგვიძლია გამოვიყენოთ ისეთი ხელსაწყოები როგორიც არის sqlmap
+
+sqlmap არის ღია კოდის (open source) ტიპის ხელსაწყო, რომელიც ავტომატიზირებულად აღმოაჩენს მითითებულ ჰოსტებზე sql ინექციის ვექტორებს და ავტომატურადვე
+აკეთებს sql ინექციას. 
+
+მისი დაყენება შეიძლება შემდეგნაირად:
+
+```
+git clone --depth 1 https://github.com/sqlmapproject/sqlmap.git sqlmap-dev
+``` 
