Update "ხელსაწყოები" და მათი გამოყენება.md

--- a/"ხელსაწყოები" და მათი გამოყენება.md
+++ b/"ხელსაწყოები" და მათი გამოყენება.md
@@ -208,5 +208,59 @@ sqlmap -u "http://მაგალითი.com/page.php?id=1" --random-agent --t
 ``` 
 man sqlmap
 ``` 
+## სტეგანოგრაფია და IT "ექსპერტიზა" 
+
+### სტეგანოგრაფია
+
+სტეგანოგრაფია არის გამოსახულების, სურათების, შეტყობინებების ან ფაილების დამალვის პრაქტიკა ისეთ სხვა ფაილებში, რაც არ არის საიდუმლო და ჩანს, როგორც ჩვეულებრივი
+ფაილი. მაგალითად ჩვენ შეგვიძლია სურათში ჩავდოთ საიდუმლო ტექსტური შეტყობინება კოდით და ეს ყველაფერი ისე შევფუთოთ, რომ სურათს არაფერი არ შეეტყოს, ფაილის 
+გადმოსაწერად და სანახავად კი დეკრიპტორი და პაროლი იქნება საჭირო. 
+
+სტეგანოგრაფიისთვის მრავალი სხვადასხვა ალგორითმი და ხელსაწყო არსებობს, ამიტომ კონკრეტული ხელსაწყოთი დაშიფრულ სტეგანოგრაფიულ სურათს იგივე ხელსაწყო სჭირდება
+გასაშიფრად.
+
+სანამ იმ ეტაპამდე მივალთ, რომ კონკრეტული აპლიკაციით და პაროლით ამოვიღოთ ინფორმაცია დაშიფრული ფაილიდან, ჯერ უნდა ვიცოდეთ საერთოდ არის თუ არა ფაილში რაიმე დამალული. ამისთვის რამდენიმე ხელსაწყო არსებობს, თუმცა ერთ-ერთი ყველაზე ფართოდ გამოყენებადი ხელსაწყო არის binwalk. მისი დაინსტალირება შეიძლება შემდეგნაირად:
+
+```
+sudo apt install binwalk
+``` 
+
+ამ აპლიკაციას შეუძლია ნებისმიერ ფაილზე აღმოაჩინოს  დამატებითი მიკერებული ფაილები და გაშვებადი კოდი. ამ აპლიკაციის გამოყენება საკმაოდ მარტივია, მაგალითად, თუ გვინდა, რომ შევამოწმოთ ნებისმიერი ფაილი და ვნახოთ რაიმე ფაილი ხომარ აქვს მიმაგრებული, ვიყენებთ შემდეგ ბრძანებას:
+
+```
+binwalk ფაილის_სახელი.png 
+``` 
+
+ამ ბრძანებით ხელსაწყო გვაჩვენებს სურათზე მიმაგრებულ ფაილებს, მათ "გაფართოებას" (.jpg , .png, .txt და სხვა), ზომას და კიდევ დამატებით ინფორმაციას არსებობის შემთხვევაში, თუმცა ე.წ მიმაგრებული ფაილების არსებობა ყოველთვის იმას არ ნიშნავს, რომ ჩვენს მიერ დასკანერებული ფაილი სტეგანოგრაფიულია, რადგან ზოგიერთ ფაილის ტიპს ნატურალურად აქვს ე.წ "ჩანერგილი" ფაილები (embedded files). 
+
+იმ შემთხვევაში, თუ რაიმე საეჭვო აღმოვაჩინეთ და გვინდა რომ მთავარი და ჩაკერებული ფაილები განვაცალკეოთ, შეგვიძლია გამოვიყენოთ შემდეგი ბრძანება:
+
+```
+binwalk -e ფაილის_სახელი.png 
+``` 
+ამ შემთხვევაში -e "დროშა" ნიშნავს extract ს ანუ განცალკევებას. ამისდა მიუხედავად, ზოგიერთ შემთხვევაში ჩაკერებული ფაილებს აქვთ ისეთი გაფართოება, რომელსაც
+binwalk აპლიკაციის კოდი ვერ ცნობს. ასეთ ფაილებს -e "დროშით" ვერ განვაცალკევებთ, თუმცა ეს იმას არ ნიშნავს, რომ binwalk ს ეს არ შეუძლია:
+
+```
+binwalk --dd='.*' ფაილის_სახელი.png
+``` 
+
+ამ ბრძანების შემთხვევაში ხელსაწყო გააცალკევებს ყველანაირი ტიპის გაფართოების ფაილებს, მიუხედავად იმისა აღიქვავს აპლიკაცია მას თუ არა.
+
+### Strings
+
+Strings არის ლინუქსზე დაფუძნებული სისტემების საბაზისო ხელსაწყო, შესაბამისად მისი დაინსტალირება არ დაგჭირდებათ. ეს ხელსაწყო საკმაოდ მარტივი გამოსაყენებელია და მხოლოდ ერთი ფუნქცია გააჩნია, თუმცა ეს ფუნქცია ზოგჯერ ყველა აპლიკაციას სჯობს. ეს ხელსაწყო ფაილში ეძებს ე.წ "დასაბეჭდ" სტრიქონებს, ანუ მანქანური კოდის ის ნაწილი, რომელიც დარჩა ლათინურ ალფაბეტზე ჩვენ შეგვიძლია ვიპოვოთ ამ ხელსაწყოს გამოყენებით.
+
+სტეგანოგრაფიაში ხშირად ხდება, რომ უკვე დაკომპილირებულ ფაილებს უმატებენ საიდუმლო ინფორმაციას. ამის აღმოჩენა კი შესაძლებელია strings ხელსაწყოთი.
+
+
+ამ ხელსაწყოს გამოსაყენებლად ჩვენ მხოლოდ და მხოლოდ ფაილის მითითება გვჭირდება:
+
+```
+strings ფაილი.png
+``` 
+
+
+
 
 
