Update "ხელსაწყოები" და მათი გამოყენება.md

--- a/"ხელსაწყოები" და მათი გამოყენება.md
+++ b/"ხელსაწყოები" და მათი გამოყენება.md
@@ -247,7 +247,7 @@ binwalk --dd='.*' ფაილის_სახელი.png
 
 ამ ბრძანების შემთხვევაში ხელსაწყო გააცალკევებს ყველანაირი ტიპის გაფართოების ფაილებს, მიუხედავად იმისა აღიქვავს აპლიკაცია მას თუ არა.
 
-### Strings
+### Strings ხელსაწყო
 
 Strings არის ლინუქსზე დაფუძნებული სისტემების საბაზისო ხელსაწყო, შესაბამისად მისი დაინსტალირება არ დაგჭირდებათ. ეს ხელსაწყო საკმაოდ მარტივი გამოსაყენებელია და მხოლოდ ერთი ფუნქცია გააჩნია, თუმცა ეს ფუნქცია ზოგჯერ ყველა აპლიკაციას სჯობს. ეს ხელსაწყო ფაილში ეძებს ე.წ "დასაბეჭდ" სტრიქონებს, ანუ მანქანური კოდის ის ნაწილი, რომელიც დარჩა ლათინურ ალფაბეტზე ჩვენ შეგვიძლია ვიპოვოთ ამ ხელსაწყოს გამოყენებით.
 
@@ -259,6 +259,81 @@ Strings არის ლინუქსზე დაფუძნებული 
 ```
 strings ფაილი.png
 ``` 
+
+
+### IT ექსპერტიზა (foresincs) 
+
+Foresincs  მოიცავს კიბერ ინციდენტების გამოძიებას ციფრული მტკიცებულებების შეგროვებით, ანალიზით და შენახვით, რათა გავიგოთ თავდასხმის ხასიათი, დავაიდენტიფიციროთ დამნაშავეები და თავიდან ავირიდოთ მომავალი ინციდენტები. CTF დავალებებში ხშირად შეიძლება შევხვდეთ ისეთ დავალებებს, სადაც მოცემული გვაქვს
+მსხვერპლის RAM image და გვევალება გავაანალიზოთ და მოვიპოვოთ სპეციფიური ტიპის ინფორმაცია. მსგავსი RAM image ებით ჩვენ შეგვიძლია გავიგოთ რა ტიპის მოწყობილობასთან
+გვქონდა საქმე, რა პროცესები ჰქონდათ მათ გაშვებული მოცემულ მომენტში, რა პროცესი რამდენ მეხსიერებას იკავებდა, ასევე შესაძლებელია მავნე აპლიკაციების და პროცესების აღმოჩენა, მათზე მანიპულირება, პაროლების აღმოჩენა და ამოღება და მრავალი სხვა.
+
+მსგავსი აპლიკაციებით სამართალდამცავები აღდგენენ მეხსიერებიდან წაშლილ ფაილებსაც, იგებენ წაშლილ ინფორმაციას და მრავალი სხვა. 
+
+როგორც სხვა ნებისმიერი მიმართულებისთვის, foresincs ისთვისაც არსებობს ბევრი სხვადასხვა ტიპის ხელსაწყო. მაგალითად ვისაუბროთ **Volatility** ზე.
+
+
+ Volatility Framework არის მსოფლიოში ყველაზე ფართოდ გამოყენებული მეხსიერების foresinc ის ხელსაწყო. ეს არის ე.წ open source აპლიკაცია და მოიცავს მრავალ სხვადასხვა ხელსაწყოს და პლაგინს foresinc ის ჩასატარებლად.
+
+აპლიკაციას დღესდღეობით აქვს ორი ვერსია - volatility2 და volatility3. მიუხედავად იმისა, რომ შეიძლება იფიქროთ, რომ volatility2 უბრალოდ volatility3 ის წინა ვერსიაა, ეს ასე არ არის. ორივე ვერსიას აქვს თავისი მსგავსებები და განსხვავებები, შესაბამისად მათი გამოყენება სხვადასხვა დავალებებში სხვადასხვანაირად შეიძლება. ამ შემთხვევაში მაგალითისთვის ვისაუბროთ Volatility3 ზე.
+
+
+Volatility არის პითონზე აგებული აპლიკაცია, შესაბამისად მისი გამოყენება პითონის დაყენების გარეშე შეუძლებელია. ამ აპლიკაციის დაყენება ხდება შემდეგნაირად
+
+```
+sudo apt update && sudo apt install python3 python3-pip -y (პითონის დასაინსტალირებლად)
+
+git clone https://github.com/volatilityfoundation/volatility3.git (volatility3 ის გადმოკლონირება გიტჰაბიდან)
+
+cd volatility3  (შევდივართ გადმოკლონირებულ ფოლდერში)
+
+pip3 install -r requirements.txt (volatility ს მოყვება საკუთარი მოთხოვნების სია, სადაც წერია პითონის რა ბიბლიოთეკები სჭირდება, რომ აპლიკაცია ჩაირთოს)
+
+```
+
+მისი გამოყენება კი ხდება შემდეგნაირად:
+
+```
+python3 vol.py -"დროშები" , "ფაილი"
+``` 
+
+
+
+როგორც უკვე ვახსენეთ, ამ ხელსაწყოს ძალიან ბევრი რამის გაკეთება შეუძლია და აქვს მრავალი ფუნქცია. მოდით განვიხილოთ რამდენიმე საბაზისო ბრძანება:
+
+```
+vol -f მეხსიერების_image.dmp windows.info
+```
+
+
+ამ ბრძანებით ჩვენ შეგვიძლია გავიგოთ Windows ტიპის ოპერაციული სისტემის ზუსტი ვერსია, არქიტექტურა და კერნელის დეტალები, რაც დამატებითი ანალიზისთვის არის გამოსადეგი
+
+```
+vol -f მეხსიერების_image.dmp windows.pslist
+```
+
+მსგავსი ბრძანებით შეგვიძლია ვნახოთ ყველა აქტიური პროცესი, რაც მოცემული RAM image ჩაწერის დროს იყო გაშვებული, უკეთესი სტრუქტრუციზაციისთვისა და მხედველობისთვის შეგვიძლია გამოვიყენოთ ეს ბრძანებაც:
+
+```
+vol -f მეხსიერების_image.dmp windows.pstree
+```
+
+
+ამ ხელსაწყოს ასევე შეუძლია კონკრეტული პროცესების ამოღება შემდეგი ანალიზისთვის, ამისთვის უნდა ვიცოდეთ ზუსტად რა PID რიცხვი აქვს იმ აპლიკაციას, რომლის გამოცალკევებაც გვინდა RAM ფაილიდან:
+
+```
+vol -f მეხსიერების_იმაგე.dmp -o extracted/ windows.dumpfiles --pid XXX << XXX ს მაგივრად პროცესის PID.
+``` 
+
+ამ აპლიკაციაზე მეტი ინფორმაციის მისაღებად ვერ გამოვიყენებთ Man ბრძანებას, რადგან იგი პითონზე არის დაფუძნებული და არ აქვს ჩაშენებული man სექცია. მეტი ინფორმაციის და ოპციების სანახავად ჩვენ უნდა გამოვიყენოთ -h "დროშა" და რომ ვნახოთ ყველა ხელმისაწვდომი პლაგინი, ბრძანება და სხვა:
+
+```
+python3 vol.py -h
+
+ან
+
+python3 vol.py სპეციფიური.პლაგინი -h (კონკრეტულ პლაგინზე ინფორმაციის მისაღებად)
+```
+
 
 
 
