Update 4. CTF კატეგორია - კრიპტოგრაფია.md

--- a/4. CTF კატეგორია - კრიპტოგრაფია.md
+++ b/4. CTF კატეგორია - კრიპტოგრაფია.md
@@ -10,4 +10,60 @@
 ## რატომ გამოიყენება კრიპტოგრაფია CTF დავალებებში?
 
 კრიპტოგრაფია CTF დავალებებში გადამწყვეტ როლს თამაშობს, რადგან ის ასახავს კიბერუსაფრთხოების რეალურ სცენარებს, სადაც საჭიროა დაშიფრული 
-ინფორმაციის გაანალიზება და გაშიფვრა მნიშვნელოვანი ინფორმაციის მოსაპოვებლად.
+ინფორმაციის გაანალიზება და გაშიფვრა მნიშვნელოვანი ინფორმაციის მოსაპოვებლად. ამრიგად, მსგავსი კრიპტოგრაფიული დავალებები ცდის
+მონაწილეების უნარს რომ აღიქვან, გაანალიზონ და გატეხონ მოცემული კრიპტოგრაფიული სქემები.
+
+
+
+
+
+## ყველაზე ხშირად გამოყენებული კრიპტოგრაფიული მეთოდები CTF დავალებებში
+
+
+### კლასიკური შიფრები 
+
+  ე.წ "კლასიკური" შიფრები არის შიფრაციის მეთოდების ის კატეგორია, რომელიც გამოიყენებოდა თანამედროვე კრიპტოგრაფიული ალგორითმების შემუშავებამდე.
+მსგავსს შიფრაციის მეთოდებს ახასიათებს დაშიფრის და დანშიფვრის სიმარტივე, რომელიც შესაძლებელია არა მხოლოდ სპეციალური ხელსაწყოებითა და აპლიკაციებით,
+არამედ ხელით და ფიზიკური გამოთვლებით. CTF დავალებებში ასეთ სიტუაციას ხშირად გადავაწყდებით, როდესაც კლასიკური შიფრების გამოყენებით უნდა "გადავთარგმნოთ" მოცემული შეტყობინება და ავიღოთ დროშა. ავიღოთ რამდენიმე მაგალითი:
+
+#### Caesar Cipher (კეისარის შიფრი) 
+
+კეისრის შიფრი (Caesar Cipher) არის უძველესი ისტორიის მქონე შიფრი. მას კეისრის შიფრი დაერქვა იულიუს კეისრის საპატივცემულოდ, რომელიც ისტორიული წყაროების მიხედვით იყენებდა ამ შიფრს სამხედრო მნიშვნელობის წერილების დასაშიფრად და განსაშიფრად. მისი დედააზრი მარტივია, ვიღებთ ნებისმიერ ასოს და გადავწევთ მას n
+რაოდენობით წინ ან უკან, მაგალითად: **Hello World** +3 კეისრის შიფრით იქნებოდა **Khoor Zruog**. გაშიფრისთვის იგივე ნაბიჯები პირიქით უნდა გავაკეთოთ ( ანუ ასოები გადავწიოთ n რაოდენობით უკან). კეისრის შიფრზე არის დაფუძნებული ძალიან ბევრი სხვა შიფრაციის მეთოდიც.
+
+
+#### Vigenère Cipher (ვიჟნერის შიფრი) 
+
+
+ვიჟნერის შიფრი ( Vigenère Cipher ) არის კეისრის შიფრის გაუმჯობესებული ვერსია. ვიჟნერის შიფრის დროს წინადადების თითოეული ასო არის დაშიფრული კეისრის შიფრის
+სხვადასხვა ვარიაციით ( თითოეული ასო არის გადაწეული წინ ან უკან n რაოდენობით ). მისი გაშიფრისთვის და დაშიფრისთვის აუცილებელია ე.წ "გასაღები სიტყა", რომელიც განსაზღვრავს რომელი ასო რა n რიცხვით არის გადაწეული წინ. მაგალითად: **Hello World** ვიჟნერის შიფრით იქნებოდა  **RIJVS UYVJN** თუ გამოვიყენებდით გასაღებად სიტყვა "key" ს.
+
+
+
+#### Transposition Cipher (ტრანსპოზიციის შიფრი) 
+
+ტრანსპოზიციური შიფრი (ასევე ცნობილია, როგორც პერმუტაციის შიფრი) არის დაშიფვრის მეთოდი, რომელიც მიმოფანტავს სიმბოლოების პოზიციებს სიმბოლოების შეცვლის გარეშე. ტრანსპოზიციის მეთოდით დაშიფვრა და განშიფვრა შეიძლება მოხდეს რამდენიმე სხვადასხვხა მეთოდით, მაგალითად სიტყვა გასაღების გამოყენებით. მაგალითად,
+სიტყვა **Hello World** იქნება **HLODEORWL** სიტყვა გასაღები Key ს გამოყენებით. 
+
+ტრანსპოზიციის შიფრს აქვს თავისი ქვე კატეგორიები შიფრაციის და განშიფვრის მეთოდის მიხედვით, მაგალითად ე.წ **Rail Fence cipher** ,  **Scytale** და სხვა.
+
+
+
+
+### თანამედროვე შიფრაციის მეთოდები
+
+მიუხედავად იმისა, რომ ზემოთ ხსენებულმა კლასიკურმა შიფრაციის მეთოდებმა საფუძველი ჩაუყარა თანამედროვე კრიპტოგრაფიას და ინფორმაციის უსაფრთხოებას, ტექნოლოგიის განვითარებასთან ერთად ისინი უფრო და უფრო დაუცველები გახდნენ თანამედროვე შეტევების მიმართ. კომპიუტერული სიმძლავრის ზრდამ და კრიპტოანალიზის ტექნიკების სწრაფმა დახვეწამ აუცილებელი გახადა უფრო მძლავრი მეთოდების შემუშავება, რის შედეგადაც მივიღეთ **თანამედროვე შიფრაციის მეთოდები**. თანამედროვე შიფრაციის მეთოდები დიდწილად არის დაფუძნებული მათემატიკურ თეორიებზე და კომპიუტერული მეცნიერების პრაქტიკებზე, რის შედეგადაც ვიღებთ უფრო უსაფრთხო, რთულად გასაშიფრ ალგორითმებს, მაგალითად:
+
+
+#### MD5 (Message Digest Algorithm 5) 
+
+
+MD5 ანუ Message Digest Algorithm შეიქმნა 1991 წელს რონალდ რივესტის მიერ. მისი მუშაობის პრინციპი შემდეგნაირია:  იგი იღებს შემომავალ შეტყობინებას და გარდაქმნის მას 512 ბიტიან ბლოკად (64 ბაიტი), შემდეგ კი უტარებს რამდენიმე ოპერაციას, როგორიც არის ე.წ Bitwise ოპერაციები, მოდულარული დამატება და  არაწრფივი ფუნქციები, შედეგს კი გარდაქმნის ფიქსირებული სიგრძის 128 ბიტიან ჰეშად, რომელიც ჩაიწერება როგორც 32 ასოიანი 16 ობითი რიცხვი.
+
+CTF დავალებებში მსგავსი ტიპის ჰეშები ხშირად გამოიყენება პაროლებისთვის, რევერსული ინჟინერიისთვის და მავნე ფაილების შესამოწმებლად მონაცემთა ბაზებში. 
+
+
+#### RSA (Rivest–Shamir–Adleman) 
+
+
+RSA არის კიდევ ერთი თანამედროვე შიფრაციის მეთოდი, რომლის სახელიც მის სამ ინვესტორს : Ron Rivest, Adi Shamir და  Leonard Adlemanს უკავშირდება. იგი შეიმუშავეს 1977 წელს და დღემდე არის მიჩნეული ასიმეტრიული შიფრის (იგივე  Public Key Cryptography) ს ფუძემდებელად. ასიმეტრიული შიფრაცია არის ორი სხვადასხვა "გასაღების" გამოყენება დაშიფრისთვისა და განშიფრისთვის, ესენია Public Key რომლითაც ხდება დაშიფვრა და Private Key რომლითაც ხდება განშიფვრა.
